# AddressValidator-COL

./: README.md  addresValidator.py  adresses.txt  main.py  pyproject.toml  temporal.py  words.txt
addressValidator_COL/: addresValidator.py
