[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AddressValidator_COL"
version = "0.0.2"
authors = [
  { name="Brayan Mauricio Cruz Martínez", email="bmauricio.cruz07@gmail.com"},
    {name="Daniel Felipe Cardenas Ruiz", email="daniel.cardenas03@uptc.edu.co"}
]
description = "Tool for validating rural/urban addresses."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/maaoo7b/AddressValidator-COL"
